Add LaTeX template and examples for academic works following ABNT standards

--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -18,15 +18,18 @@
 \usepackage{siunitx}
 \usepackage{amsmath}
 \usepackage{amssymb}
+\usepackage{commath}
 \usepackage{tabularray}
 \usepackage{upgreek}
 \usepackage{textgreek}
 \usepackage{listings}
 
-\usepackage[backend=biber, style=abnt]{biblatex}
+\usepackage{tikz}
+\usepackage{pgfplots}
 
 % ----------------
 % Bibliografia
+\usepackage[backend=biber, style=abnt]{biblatex}
 \addbibresource[glob]{bib/*.bib}
 
 
