Refatora: `includes/pages/sumarios.tex` -> `includes/partial/sumarios.tex`

--- a/includes/pretextual.tex
+++ b/includes/pretextual.tex
@@ -32,7 +32,7 @@
 \include{includes/pages/resumos.tex}
 
 % Listas e Sumários
-\include{includes/pages/sumarios.tex}
+\include{includes/partial/sumarios.tex}
 
 % ---
 
