--- a/includes/preamble.tex
+++ b/includes/preamble.tex
@@ -1,17 +1,15 @@
+\usepackage[utf8]{inputenc}      % Permite digitar acentos e caracteres especiais diretamente
+\usepackage[LGR,T1]{fontenc}     % Carrega as codificações de fonte latina (T1) e grega (LGR)
+
 \usepackage{indentfirst}
 \usepackage[dvipsnames]{xcolor}
 \usepackage{graphicx}
 \usepackage{microtype}
-\usepackage{multicol}
-\usepackage{multirow}
 \usepackage{lipsum}
 \usepackage{csquotes}
 
 % Fonte do documento (Latin Modern)
 \usepackage{lmodern}
-% Fonte para Grego
-\usepackage{tempora}
-\babelfont[greek]{rm}{tempora}
 
 % Meus pacotes
 \usepackage{amsmath}
@@ -50,8 +48,7 @@ Departamento de Química
 % ----------------
 % Comandos personalizados
 
-% \newcommand*{\RR}{\mathbb{R}}
-\input{includes/partial/custom-commands.tex}
+\newcommand*{\RR}{\mathbb{R}}
 
 
 % ----------------
