--- a/main.tex
+++ b/main.tex
@@ -1,27 +1,28 @@
 \documentclass[12pt, openany, oneside, a4paper, greek, english, brazil]{abntex2}
-% \documentclass[12pt, openany, oneside, a4paper]{abntex2}
 
 \input{includes/preamble.tex}
 
 \begin{document}
 
-%%%%%%%%%%%%%%%%
+% ----------------
 % Pré-textuais
+
 \input{includes/pretextual.tex}
 
 
-%%%%%%%%%%%%%%%%
+% ----------------
 % Textuais
 
-%\part{Introdução}
+% Capítulo: Introdução
 \include{chapters/intro.tex}
 
-\part{Sobre este modelo}
+% Parte Fictícia
 \include{chapters/instrucoes.tex}
 
 
-%%%%%%%%%%%%%%%%
+% ----------------
 % Pós-Textuais
+
 \input{includes/postextual.tex}
 
 \end{document}
