Refatora references.bib

--- a/bib/references.bib
+++ b/bib/references.bib
@@ -1,3 +1,104 @@
+@online{LaTeXProjectLogo,
+  author  = {{The \LaTeX{} Project Team}},
+  title   = {The \LaTeX{} Project's Logo},
+  url     = {https://www.latex-project.org/img/latex-project-logo.svg},
+  urldate = {2025-05-08},
+}
+
+@manual{abntex2classe,
+  author       = {Lauro César Araujo},
+  title        = {A classe abn\TeX2},
+  subtitle     = {Modelo canônico de trabalhos acadêmicos brasileiros compatível com as normas ABNT NBR 14724:2011, ABNT NBR 6024:2012 e outras},
+  year         = {2015},
+  organization = {Equipe abnTeX2},
+  url          = {https://ctan.org/pkg/abntex2},
+  urldate      = {2025-05-06},
+}
+
+@manual{biblatex-abnt,
+  author       = {Daniel Ballester Marques},
+  title        = {Bib\LaTeX-ABNT},
+  subtitle     = {Estilo para Bib\LaTeX{} compatível com as normas da ABNT },
+  year         = {2018},
+  organization = {Equipe abnTeX2},
+  url          = {https://ctan.org/pkg/biblatex-abnt},
+  urldate      = {2025-05-06},
+}
+
+@book{Lamport1994,
+  author    = {Leslie Lamport},
+  title     = {\LaTeX},
+  subtitle  = {A Document Preparation System},
+  year      = {1994},
+  publisher = {Addison-Wesley},
+  address   = {Reading},
+  edition   = {2},
+  isbn      = {9780201529838},
+}
+
+@online{LamportTuring2013,
+  author       = {Dahlia Malkhi},
+  title        = {Leslie B. Lamport},
+  subtitle     = {A.M. Turing Award Laureate},
+  year         = {2013},
+  organization = {Association for Computing Machinery},
+  url          = {https://amturing.acm.org/award_winners/lamport_1205376.cfm},
+  urldate      = {2025-05-06},
+}
+
+@book{Mittelbach2004,
+  author    = {Mittelbach, Frank and Goossens, Michel and Braams, Johannes and Carlisle, David and Rowley, Chris and Fuller, John},
+  title     = {The \LaTeX{} Companion},
+  year      = {2004},
+  publisher = {Addison-Wesley},
+  address   = {Boston},
+  isbn      = {978-0-20136299-2},
+}
+
+@incollection{Dijkstra1982,
+  author    = {Dijkstra, Edsger W.},
+  title     = {On the Role of Scientific Thought},
+  year      = {1982},
+  journal   = {SpringerLink},
+  booktitle = {{Selected Writings on Computing: A personal Perspective}},
+  pages     = {60--66},
+  publisher = {Springer},
+  address   = {New York},
+  doi       = {10.1007/978-1-4612-5695-3_12},
+  isbn      = {978-1-4612-5695-3},
+}
+
+@book{Knuth1984,
+  author    = {Donald E. Knuth},
+  title     = {The \TeX book},
+  year      = 1984,
+  series    = {Computers \& typesetting},
+  month     = jan,
+  publisher = {Addison Wesley},
+  address   = {Boston},
+  url       = {https://visualmatheditor.equatheque.net/doc/texbook.pdf},
+  urldate   = {2025-05-06},
+}
+
+@online{KnuthTuring1974,
+  author       = {David Walden},
+  title        = {Donald E. Knuth},
+  subtitle     = {A.M. Turing Award Laureate},
+  year         = {1974},
+  organization = {Association for Computing Machinery},
+  url          = {https://amturing.acm.org/award_winners/knuth_1013846.cfm},
+  urldate      = {2025-05-06},
+}
+
+@online{Knuth1996Kyoto,
+  author       = {Donald E. Knuth},
+  title        = {Digital Typography},
+  year         = {1996},
+  url          = {https://laussy.org/images/9/90/Knuth-kyotoprize-12kA_lct_EN.pdf},
+  urldate      = {2025-05-06},
+  howpublished = {Palestra comemorativa do Prêmio Kyoto},
+}
+
 @xdata{x-TAOCP,
   author    = {Donald E. Knuth},
   title     = {The Art of Computer Programming},
@@ -56,107 +157,4 @@
   month      = may,
   isbn       = {978-0-20103806-4},
   titleaddon = {Part II},
-}
-
-
-@book{Knuth1984,
-  author    = {Donald E. Knuth},
-  title     = {The \TeX book},
-  year      = 1984,
-  series    = {Computers \& typesetting},
-  month     = jan,
-  publisher = {Addison Wesley},
-  address   = {Boston},
-  url       = {https://visualmatheditor.equatheque.net/doc/texbook.pdf},
-  urldate   = {2025-05-06},
-}
-
-@online{KnuthTuring1974,
-  author       = {David Walden},
-  title        = {Donald E. Knuth},
-  subtitle     = {A.M. Turing Award Laureate},
-  year         = {1974},
-  organization = {Association for Computing Machinery},
-  url          = {https://amturing.acm.org/award_winners/knuth_1013846.cfm},
-  urldate      = {2025-05-06},
-}
-
-@online{Knuth1996Kyoto,
-  author       = {Donald E. Knuth},
-  title        = {Digital Typography},
-  year         = {1996},
-  url          = {https://laussy.org/images/9/90/Knuth-kyotoprize-12kA_lct_EN.pdf},
-  urldate      = {2025-05-06},
-  howpublished = {Palestra comemorativa do Prêmio Kyoto},
-}
-
-
-@book{Lamport1994,
-  author    = {Leslie Lamport},
-  title     = {\LaTeX},
-  subtitle  = {A Document Preparation System},
-  year      = {1994},
-  publisher = {Addison-Wesley},
-  address   = {Reading},
-  edition   = {2},
-  isbn      = {9780201529838},
-}
-
-@online{LamportTuring2013,
-  author       = {Dahlia Malkhi},
-  title        = {Leslie B. Lamport},
-  subtitle     = {A.M. Turing Award Laureate},
-  year         = {2013},
-  organization = {Association for Computing Machinery},
-  url          = {https://amturing.acm.org/award_winners/lamport_1205376.cfm},
-  urldate      = {2025-05-06},
-}
-
-@book{Mittelbach2004,
-  author    = {Mittelbach, Frank and Goossens, Michel and Braams, Johannes and Carlisle, David and Rowley, Chris and Fuller, John},
-  title     = {The \LaTeX{} Companion},
-  year      = {2004},
-  publisher = {Addison-Wesley},
-  address   = {Boston},
-  isbn      = {978-0-20136299-2},
-}
-
-@online{LaTeXProjectLogo,
-  author       = {{The \LaTeX{} Project Team}},
-  title        = {The \LaTeX{} Project's Logo},
-  url          = {https://www.latex-project.org/img/latex-project-logo.svg},
-  urldate      = {2025-05-08},
-}
-
-@incollection{Dijkstra1982,
-	author = {Dijkstra, Edsger W.},
-	title = {{On the Role of Scientific Thought}},
-	booktitle = {{Selected Writings on Computing: A personal Perspective}},
-	journal = {SpringerLink},
-	pages = {60--66},
-	year = {1982},
-	isbn = {978-1-4612-5695-3},
-	publisher = {Springer},
-	address = {New York},
-	doi = {10.1007/978-1-4612-5695-3_12}
-}
-
-@manual{abntex2classe,
-  author       = {Lauro César Araujo},
-  title        = {A classe abn\TeX2},
-  subtitle     = {Modelo canônico de trabalhos acadêmicos brasileiros compatível com as normas ABNT NBR 14724:2011, ABNT NBR 6024:2012 e outras},
-  year         = {2015},
-  organization = {Equipe abnTeX2},
-  url          = {https://ctan.org/pkg/abntex2},
-  urldate      = {2025-05-06},
-}
-
-@manual{biblatex-abnt,
-  author       = {Daniel Ballester Marques},
-  title        = {Bib\LaTeX-ABNT},
-  subtitle     = {Estilo para Bib\LaTeX{} compatível com as normas da ABNT },
-  year         = {2018},
-  organization = {Equipe abnTeX2},
-  url          = {https://ctan.org/pkg/biblatex-abnt},
-  urldate      = {2025-05-06},
 }
